2008-06-11  Soeren Sonnenburg <Soeren.Sonnenburg@first.fraunhofer.de>

	* ChangeLog: updated changelog
	* interface/SGInterface.cpp,
	  kernel/WeightedDegreePositionStringKernel.cpp,
	  kernel/WeightedDegreePositionStringKernel.h,
	  kernel/WeightedDegreeStringKernel.cpp,
	  kernel/WeightedDegreeStringKernel.h, lib/Trie.h: fix a couple of
	  crashers due to uninited tries by making sure tables that are
	  cleaned up on cleanup() are inited on init() - this is yet
	  another side effect of correctly removing lhs/rhs and calling
	  kernel cleanup()
	* interface/SGInterface.cpp, kernel/Kernel.cpp, kernel/Kernel.h: -
	  add a function remove_lhs_and_rhs() which simply calls
	  remove_rhs() and remove_lhs() in the right order (recall that the
	  case lhs==rhs is valid and currently needs extra treatment)
	  - add assertions for WDS kernel 2/3

2008-06-11  Sebastian Henschel <shogun@kodeaffe.de>

	* features/StringFeatures.h, kernel/WeightedDegreeStringKernel.cpp:
	  kernel/features:
	  - Previous method to check for vector lengths was wrong.
	* kernel/Kernel.cpp: kernel:
	  - Possibly fixed an issue with regression and kernel cache.

2008-06-10  Sebastian Henschel <shogun@kodeaffe.de>

	* features/StringFeatures.h, kernel/WeightedDegreeStringKernel.cpp:
	  kernel/features:
	  - Check that all vectors have the same length when new features
	  are set for
	  WeightedDegreeString kernel.

2008-06-10  Soeren Sonnenburg <Soeren.Sonnenburg@first.fraunhofer.de>

	* guilib/GUIStructure.cpp, interface/CmdLineInterface.cpp,
	  interface/CmdLineInterface.h, interface/OctaveInterface.cpp,
	  interface/OctaveInterface.h, interface/PythonInterface.cpp,
	  interface/PythonInterface.h, interface/RInterface.cpp,
	  interface/RInterface.h, lib/Mathematics.h, structure/Plif.cpp,
	  structure/Plif.h: try to get nd-array support also for python and
	  octave (dummy for cmdline and R) + a couple of compile fixes
	* structure/DynProg.cpp: fix compile warnings, logical and mismatch